gcc/testsuite/gdc.test/fail_compilation/imports/b314.d
module imports.b314;

package import renamedpkg = imports.c314;
package import imports.c314 : bugpkg=bug;
